# mxylo

./: README.md
MidiXylo/: README.md
MidiXylo/components/midi_msg/: CMakeLists.txt  midi_msg.cpp
MidiXylo/components/usb_midi/: CMakeLists.txt  idf_component.yml  usb_midi.cpp
MidiXylo/main/include/: adc_ctrl.hpp  display.hpp  note_controller.hpp  open_lcd.hpp  peripheral_monitor.hpp
MidiXylo/main/src/: mux.cpp
mXyloFirmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
mXyloFirmware/components/midi_msg/include/: midi_msg.h
mXyloFirmware/components/usb_midi/include/: midi_defs.h  usb_midi.h
mXyloFirmware/main/: CMakeLists.txt  KConfig  main.cpp
mXyloFirmware/main/include/: m_xylo.hpp  mux.hpp
mXyloFirmware/main/src/: adc_ctrl.cpp  debug_gpio.cpp  display.cpp  m_xylo.cpp  note_controller.cpp  open_lcd.cpp  peripheral_monitor.cpp
mXyloFirmware/main/tests/: test_all.cpp  test_gpio_out.cpp  test_mux_adc.cpp  test_usb_midi.cpp
